--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
