--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ellipsis-component": "^1.1.11",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-loader-spinner": "^6.1.6",
