--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-ellipsis-component": "^1.1.11",
     "react-hook-form": "^7.54.2",
