--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
+    "react-select": "^5.9.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
